# homework_oop

./: README.md  main.py  pyproject.toml
src/: abcs.py  fileio.py  mixins.py  models.py  submodels.py
tests/: test_fileio.py  test_mixins.py  test_models.py  test_submodels.py
